--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap');
 
 
-@import url(//fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap);
+@import url('//fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.05);}   */
@@ -184,10 +184,13 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    font-size:24px;color:black;line-height:28px; display:flex; flex-direction: column; justify-content: center; align-items: flex-start;
 }
 
-.SearchPane #logo h1 { font-size:46px; color: #152631; font-size: 46px; font-weight: 900; font-family:"Noto Sans Tc" !important;
+.SearchPane #logo h1 { font-size:46px; color: #152631; font-size: 46px; font-weight: 900; font-family:"Noto Sans TC" !important;
    /* letter-spacing: 0.65px;  */
    line-height: 53px;margin-top:0; margin-bottom:14px;text-align: left;;
 }
+
+.SearchPane #logo h1[lang="bo"] {  font-size:61px; margin-bottom:32px; font-weight:500; }
+
 .SearchPane #logo h1 + div {
    font-weight:500;
    margin-bottom:15px;
