--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1582,6 +1582,8 @@ h4:not(.first)
    opacity:1 !important;
 }
 
+.resource .sub > h4.label:not(:first-of-type) + .label { margin-left:175px;}
+
 
 /* perfect narrow highlighting of property values */
 /*
@@ -2427,6 +2429,7 @@ h2 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; ba
 .sameAs.eftr:not(.ulink):not(h4) .before, h4 .eftr .before { background-image:url("/84000.svg"); background-size:16px auto; background-position:top 4px left 0px;}
 .sameAs.rkts:not(.ulink):not(h4) .before, h4 .rkts .before { background-image:url("/RKTS.png"); background-position:top 2px left 2px; }
 .sameAs.wd:not(.ulink):not(h4) .before, h4 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; background-position:top 2px left 2px;}
+.sameAs.tol:not(.ulink):not(h4) .before, h4 .tol .before { background-image:url("/ToL.png");  background-size:19px auto; background-position: center}
 
 .provider.bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
 .provider.bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
