--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1086,7 +1086,7 @@ h4:not(:hover) > .lang
 
 .resource .data#outline .is-root .id { color:#d73449; }
 
-.resource .data#outline .root + div .abs { position:absolute; width:auto;}
+.resource .data#outline .root + div .abs { position:absolute; width:110px;}
 
 .resource .data#outline .root + div span.top { display: block;  margin-top:5px; }
 
@@ -1220,6 +1220,10 @@ h4:not(:hover) > .lang
 .resource.user .data#outline > .search { justify-content: flex-start; padding-left:37px;  }
 .resource.user .data#outline > .search h3 { font-weight:600;}
 .resource.user .data#outline .help { font-size:14px; margin-bottom:24px; margin-top:8px; font-weight:400;padding-left:2px;}
+
+
+.resource .data#outline .provider img { height:16px; vertical-align: -3px !important;}
+.resource .data#outline .provider { padding-right:10px; }
 
 .resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 34px;  height: 60px; background-color: #172832; line-height:58px; }
 .resource .data .header .src.orig { cursor:pointer;}
