--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1222,8 +1222,12 @@ h4:not(:hover) > .lang
 .resource.user .data#outline .help { font-size:14px; margin-bottom:24px; margin-top:8px; font-weight:400;padding-left:2px;}
 
 
-.resource .data#outline .provider img { height:16px; vertical-align: -3px !important;}
-.resource .data#outline .provider { padding-right:10px; }
+.resource .data#outline .provider { padding-right:10px;  }
+.resource .data#outline .provider img { height:14px; vertical-align: -2px !important; cursor:pointer;}
+
+
+
+.resource .data#outline a.no-bdrc img { position:relative; margin-top:-6px; } 
 
 .resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 34px;  height: 60px; background-color: #172832; line-height:58px; }
 .resource .data .header .src.orig { cursor:pointer;}
