--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1101,6 +1101,9 @@ h4:not(:hover) > .lang
 .resource .data#outline .root + div span.top :not(.lang) { display:inline; vertical-align:top; }
 
 
+.resource .data#outline .is-root { scroll-margin: calc((100vh - 80px) /2); }
+
+
 .resource .data#outline .parTy div { text-transform: uppercase; font-size:11px; font-family:"Noto Sans SemCond" !important;  opacity:1; 
    /*padding:4px 1px 0 1px; text-align: center;  margin-top:-2px; */
 }
