--- a/src/components/App.css
+++ b/src/components/App.css
@@ -80,7 +80,7 @@
 
 footer#site-footer { background:#172832; color:white; padding-bottom:0px; }
 footer#site-footer > div.head { background: #dddddd; position:absolute; height:55px; width:100%; display:block;z-index:0;}
-footer#site-footer > div.head::before { content:'';display:block;background:#efefef; height:100%; width:1440px;max-width:100%; margin:auto;}
+footer#site-footer > div.head::before { content:'';display:block;background:white/*#efefef*/; height:100%; width:1440px;max-width:100%; margin:auto;}
 footer#site-footer > div.foot,
 footer#site-footer > div.body { padding:40px 60px; width:1222px; max-width:100%; margin:auto; z-index:1;
    display:block;position: relative;
@@ -128,6 +128,7 @@ footer#site-footer > div.foot #t2 { position:relative;}
 footer#site-footer > div.foot #t2::before { content:''; display:block; position: absolute; left:-65px; top:5px;height:75px; border-left: 1px solid white;}
 
 footer#site-footer [lang='bo'] { font-size:18px !important;}
+
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ home */
 
@@ -497,8 +498,8 @@ footer #donate,
 #samples { width: 960px; margin-right:40px; /*margin: auto;*/ text-align: left; z-index: 0; padding:30px;background:white; display:block;
    padding-left:16px; padding-right:16px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
 }
-#samples { padding: 20px 0 40px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */ margin-bottom:75px;}
-#samples h3 { text-transform: uppercase; text-align: center; font-size:23px;margin:10px 0;}
+#samples { padding: 60px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */ margin-bottom:75px; width:1220px;}
+#samples h3 { text-transform: uppercase; text-align: center; font-size:28px;margin:0 0 10px 0;}
 
 #results {  padding-bottom:75px;margin-bottom:75px;}
 
@@ -563,6 +564,13 @@ p.no-result {
 
 .result-content > hr { margin:0;height:0;padding:0;opacity:0;border:0; }
 li + a.result { margin-top:-5px; }
+
+/* ---------------------------------------------------------------------------------------------------------------------------- latest */
+
+#latest { width:100%;background:white;padding:60px 60px 100px 60px;display: block;box-sizing: border-box;}
+
+#latest > div { padding: 40px ; margin:auto; width:1220px;background:#efefef;box-sizing: border-box;max-width:100%;margin-top:60px;}
+#latest h3 { text-align: left; font-size:28px; margin:auto; width:1220px;box-sizing: border-box;max-width:100%;padding-left:40px;}
 
 /* --------------------------------------------------------------------------------------------------------------------- results/matches */
 
