--- a/src/components/App.css
+++ b/src/components/App.css
@@ -569,7 +569,7 @@ li + a.result { margin-top:-5px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------- latest */
 
-#latest { width:100%;background:white;padding:60px 60px 100px 60px;display: block;box-sizing: border-box;}
+#latest { width:100%;background:white;padding:60px 60px 100px 60px;display: block;box-sizing: border-box; position:relative;}
 
 #latest > div:first-of-type { padding: 60px 30px ; margin:auto; width:1220px;background:#efefef;box-sizing: border-box;max-width:100%;margin-top:60px; }
 #latest .slide-bg { display:flex; justify-content: flex-start; margin-left:0; transition: margin-left 0.8s ease-in-out; }
@@ -602,6 +602,11 @@ li + a.result { margin-top:-5px; }
 #latest #syncs-nav span.on { cursor:pointer; opacity:1;}
 
 #latest .slide-bg.slided { margin-left:calc(-100% + 5px); }
+
+#latest .seeAll { position: absolute; right:0; color:#343434; margin-right:calc(60px + 49px + 36px + 18px); display: inline-block; text-transform:uppercase;
+   border-bottom:2px solid #343434;font-weight:500;top:70px;;
+}
+#latest .seeAll:hover { color:#d73449; border-color: #d73449;}
 
 /* --------------------------------------------------------------------------------------------------------------------- results/matches */
 
@@ -3198,6 +3203,8 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
 
 @media (max-width:1320px)
 {
+   #latest .seeAll { margin-right:60px;}
+   
    #res-header > div, #results /*, #samples*/ { margin-left:calc((100% - 700px)/2);}
    .SidePane.left { position:absolute; left:0;top:0; z-index:0 ;}
    #res-container { position:relative; }
