--- a/src/components/App.css
+++ b/src/components/App.css
@@ -266,6 +266,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .active-filter { font-size:0; box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); border-radius: 2px;background:white; height:28px;line-height:28px;}
 .active-filter,#clear-filters  {  margin-bottom:10px;  }
 
+.active-filter span b,
 .active-filter b span { color: #152631; font-size:11px; font-weight:700; padding-left:2px;}
 /* .active-filter > span > b { margin-left:10px;} */
 
@@ -994,7 +995,9 @@ h4:not(:hover) > .lang
 
 .resource > .ariane { position:absolute; top:105px; color: #343434; left:0; margin-left:140px;padding-left:12.125%; }
 .resource > .ariane img { display:inline-block; margin-right:5px; vertical-align: -1px;}
-.resource > .ariane a { text-decoration: none; color: #343434; font-weight:500; font-size:13px;}
+.resource > .ariane a { text-decoration: none; color: #343434; font-weight:500; font-size:13px; }
+.resource > .ariane a span { display:inline-block; }
+.resource > .ariane a span::first-letter { text-transform: capitalize;}
 .resource > .ariane a:hover span { text-decoration: underline;}
 .resource > .ariane a span span { font-weight:700; }
 
