css fix for results title

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -522,7 +522,8 @@ p.no-result {
 
 #res-container > ul li { padding-left:0; pointer-events:none; }
 #res-container > ul h4 { padding-left:22px;; }
-#res-container > ul h4 { color:#343434; font-size:24px; /*font-family:"Noto Sans";*/ font-weight:900; text-transform:uppercase;
+#res-container > ul h4 { color:#343434; font-size:24px; /*font-family:"Noto Sans";*/ font-weight:900; text-transform:uppercase; }
+#res-container > ul:not(#samples) h4 {
    white-space: nowrap; text-overflow: ellipsis; overflow: hidden;
 }
 
