--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1411,6 +1411,8 @@ vertical-align:middle;}
 .resource .data h2.on + h3 { font-size:18px; margin-top:10px; }
 .resource .data h2.on + h3 span { text-transform: none; }
 
+.resource .data h2.on ~ h3.outline-link { font-size:18px; line-height:42px;}
+
 .resource .title h2 a { color: #343434; text-decoration: none; width:100%;height:100%;display:flex;justify-content: center;align-items: center;}
 
 .resource .title h2:not(.on) > a > :not(.T),
